<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgwhite"
        android:elevation="1dp"
        android:id="@+id/frame_login">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:padding="5dp"
                        android:background="@drawable/book_a_service_bg"

                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:padding="10dp"
                            android:gravity="left"
                            android:hint="@string/Email_phone"
                            android:id="@+id/edittext_email" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/book_a_service_bg"
                        android:layout_marginTop="5dp"

                        android:gravity="left"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:gravity="left"
                            android:singleLine="true"
                            android:hint="@string/Password"
                            android:id="@+id/edittext_password" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:background="@color/colorPrimary"
                            android:id="@+id/btnsignin" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/signup"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:background="@color/colorPrimary"
                            android:id="@+id/btnsignup" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:gravity="bottom"
                        android:padding="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:id="@+id/forgot_pass"
                        android:onClick="forgot_password"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="18dp"
                        android:layout_marginEnd="18dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/forgot_pass"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/remembercheckbox"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Remember Me"
                        android:layout_alignBaseline="@+id/remembercheckbox"
                        android:layout_alignBottom="@+id/remembercheckbox"
                        android:layout_toRightOf="@+id/remembercheckbox"
                        android:layout_toEndOf="@+id/remembercheckbox" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>


    />
</LinearLayout>