<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView4"
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"


                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/layoutbackground"

                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/jfdk"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <RadioGroup
                            android:id="@+id/radiogroup1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="true"
                            android:orientation="horizontal">


                            <RadioButton
                                android:id="@+id/radioButtonmale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Mr." />

                            <RadioButton
                                android:id="@+id/radioButtonfemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ms." />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/signup_firstname"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/firstname"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tiler"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">



                            <EditText
                                android:id="@+id/signup_lastname"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/lastname"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilr3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">



                            <EditText
                                android:id="@+id/signup_dob"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="DOB"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tilt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/signup_address"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/signup_address"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/toil"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/signup_email"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/jfd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/to5il"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/signup_phone"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/phone"
                                android:inputType="number"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tovvil"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <AutoCompleteTextView
                                android:id="@+id/signup_loc"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="Current Location"
                                android:singleLine="true" />


                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/toivl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <Spinner
                                android:id="@+id/signup_profilemanager"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:spinnerMode="dropdown" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/toivhjjl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/signup_password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/book_a_service_bg"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tofdfivhjl"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <EditText
                                android:id="@+id/signup_confirm_password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/signup_cofirmpassword"
                                android:inputType="textPassword"
                                android:padding="10dp"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/button_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <Button
                                android:id="@+id/btn_signuppage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/colorPrimary"
                                android:text="@string/signup"
                                android:textColor="#ffffff"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <Button
                                android:id="@+id/btn_signupcancel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/colorPrimary"
                                android:padding="10dp"
                                android:text="@string/cancel"
                                android:textColor="#ffffff"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>